fixed overflow homepage and overlapping divs

--- a/base/static/css/main.css
+++ b/base/static/css/main.css
@@ -444,7 +444,6 @@ textarea {
 	color: #F0FFFF;
 	line-height: 60px;
 	text-align: center;
-	font-size: 50px !important;
 	font-family: courier, monospace;
 	text-transform: capitalize;
 	font-weight: 600;
@@ -453,20 +452,20 @@ textarea {
 .home-page .section-wrap h1:before {
 	text-align: left;
 	content: '<h1>';
-	left: 0;
-	font-family: sans-serif;
+	left: 10px;
 	color: #515152;
-	font-size: 18px;
+	font-size: 14px;
 	position: absolute;
 	margin-top: -35px;
+	-webkit-animation: fader_effect 1s 1.1s backwards;
+	animation: fader_effect 1s 1.1s backwards;
 }
 
 .home-page .section-wrap h1:after {
 	content: '</h1>';
-	font-family: sans-serif;
 	color: #515152;
-	right: 0;
-	font-size: 18px;
+	right: 10px;
+	font-size: 14px;
 	position: absolute;
 	-webkit-animation: fader_effect 1s 1.1s backwards;
 	animation: fader_effect 1s 1.1s backwards;
@@ -605,19 +604,18 @@ textarea {
 .about,
 .contact {
 	display: flex;
-	height: 100%;
 	justify-content: space-between;
 }
 
 .about .divider,
 .contact .divider {
 	width: 50%;
-	height: 100%;
 	border-right: 1px solid #000000;
 }
 .about .profile {
 	left: 50%;
 	padding: 20px;
+	height: 100vh;
 	background-color: whitesmoke;
 }
 
@@ -640,7 +638,6 @@ textarea {
 	text-align: left;
 	line-height: 1.8;
 	padding: 10px 20px 10px 30px;
-	height: 100%;
 }
 .title {
 	display: inline-block;
@@ -1296,7 +1293,6 @@ input:focus:-ms-input-placeholder {
 		margin-left: 8%;
 	}
 	.home-page .section-wrap h1 {
-		font-size: 47px !important;
 		line-height: 40px !important;
 	}
 	.flipper-inner {
@@ -1311,10 +1307,6 @@ input:focus:-ms-input-placeholder {
 	.timeline .honour .description {
 		padding-left: 20px;
 	}
-	.about .profile,
-	.contact .reach-me-wrap {
-		height: 100%;
-	}
 	.about, .contact {
 		display: block;
 	}
@@ -1325,6 +1317,7 @@ input:focus:-ms-input-placeholder {
 		left: unset;
 		position: unset;
 	}
+
 }
 
 @media (max-width: 625px) {
@@ -1354,6 +1347,12 @@ input:focus:-ms-input-placeholder {
 	}
 	#nav_bar ul.social {
 		display: none
+	}
+	.home-page .section-wrap h1 {
+		font-size: 24px;
+		text-align: left;
+		padding: 0 20px 0 20px;
+		text-transform: none;
 	}
 	.home-page h1:after {
 		display: none;
